web/src/app/components/header/header.component.sass
@import '../../../sass/vars'
@import '../../../sass/mixins'
    

.part-container
    display: flex
    align-items: center
    padding: 10px
    border-radius: 150px
    background-color: $c-nqblack


.dropdown-popup
    position: absolute
    z-index: 10
    transform: translate(-9px, 42px)
    width: 100%


.popup-entry
    display: flex

    p
        margin-left: 10px
        margin-right: 0 !important
        text-transform: capitalize
        font-size: 0.9em

    img
        width: 15px
        height: 15px
        +my-auto


#header
    top: 0
    left: 0
    right: 0
    padding: 14px 20px 0 20px
    display: flex
    align-items: center
    z-index: 10
    position: fixed
    pointer-events: none

    > *
        pointer-events: all

    h1
        font-size: 26px

    .avatar
        height: 30px
        width: 30px
        +round

    #heading
        font-size: 25px

    #user-info
        position: relative
        margin-right: 0
        margin-left: auto
        border-radius: 100px
        cursor: pointer

        .avatar
            height: 25px
            width: 25px

        .dropdown-btn
            font-size: 12px
            margin: 0 15px 0 10px
            border-radius: 3px
            cursor: pointer
            +my-auto

        p
            +my-auto
            margin-right: 15px

    .routes
        display: flex
        margin-left: 20px

        a
            padding: 5px 10px
            background-color: rgba(0, 0, 0, .3)
            margin-right: 5px
            border-radius: 100px
            opacity: 0.8
            transition: all 0.2s ease
            font-size: 0.8em
            &:hover
                opacity: 1


.btn-login
    padding: 4px 14px
    display: flex


@media only screen and (max-width: 900px)
    #header
        .routes 
            display: none

